# dex-caM-xEmA

c#_example/: Program.cs  README.md
c_example/: example.cpp
cpp_example/cctag_test/: CMakeLists.txt  camera_status.h  main.cpp
cpp_example/stereo_calib/: CMakeLists.txt
python_example/: example_python.py
ubuntu/python3/: kw-2.2-cp310-cp310-linux_x86_64.whl  kw-2.2-cp311-cp311-linux_x86_64.whl  kw-2.2-cp37-cp37m-linux_x86_64.whl  kw-2.2-cp38-cp38-linux_x86_64.whl  kw-2.2-cp39-cp39-linux_x86_64.whl
windows/c#_example/: example.cs
windows/c_example/: open_cam3d_sdk.h
windows/cpp_example/: cpp_example.cpp
windows/cpp_example/cctag_test/: xcamera.h
windows/cpp_example/stereo_calib/: xsctt.cpp
windows/cpp_example/xsctt + cctag/: d_and_p.ps1
